# nautobot-plugin-wires

./: .gitignore  README.md  pyproject.toml
nautobot_plugin_wires/: __init__.py  repwires.py  template_content.py  urls.py  views.py
nautobot_plugin_wires/templates/nautobot_plugin_wires/: tab_device_detail_wires.html
